--- a/assoziation.html
+++ b/assoziation.html
@@ -84,7 +84,7 @@
 
 
 
-<h1 class="subject">HEALTHY EGO Verein für Kunst- & Kulturförderung</h1>
+<h1 class="subject">HEALTHY EGO – Verein für Kunst- & Kulturförderung e.V.</h1>
 
 <p class="description">
   Unser Ziel bei HEALTHY EGO ist es, die kollaborative Förderung von Kunst und Kultur zu realisieren.
@@ -118,23 +118,22 @@
 <p class="description">
   <i>
     Our goal at HEALTHY EGO is to realise the collaborative promotion of art and culture.
-    In concrete terms, this means that we actively coordinate the collaboration between artists.
+    In concrete terms this means that we actively coordinate the collaboration between artists.
     We bring together producers, software developers, fashion designers, photographers,
-    graphic designers, musicians, videographers and many other creatives who support each other's work,
-    who support each other in their work.
+    graphic designers, musicians, videographers and many other creatives who support each other's work.
     <br>
     <br>
     In addition, we offer our artists a platform: by realising
-    <a href="./veranstaltungen.html">events</a>, we make our exciting variety of projects tangible.
+    <a href="./veranstaltungen.html">events</a>, our exciting variety of projects can be experienced.
     In addition to organising exhibitions, concerts and readings, we also support our association
     members in the conception and publication of publications.
     <br>
     <br>
     We want to support young people who recognise their potential:
-    Are you artistically active and want to broaden your horizons,
-    make new contacts and receive support in realising your ideas?
+    Are you artistically active, do you want to broaden your horizons,
+    do you want to network and receive support in realising your ideas?
     We are always on the lookout for talent to make our association
-    even more diverse! We are active regardless of location - anyone can participate from anywhere.
+    even more diverse! We are location-independent - anyone can participate from anywhere.
     <br>
     We look forward to
     <a href="mailto:healthego@icloud.com">hearing from you</a>!
