--- a/assoziation.html
+++ b/assoziation.html
@@ -88,7 +88,7 @@
 
 <p class="description">
   Unser Ziel bei HEALTHY EGO ist es, die kollaborative Förderung von Kunst und Kultur zu realisieren.
-  Konkret heißt das: Wir koordinieren aktiv die Zusammenarbeit zwischen Künstlern.
+  Konkret heißt das: Wir koordinieren aktiv die Zusammenarbeit zwischen Künstlerinnen und Künstlern.
   Wir bringen Producer*innen, Softwareentwickler*innen, Modedesigner*innen, Fotograf*innen,
   Grafikdesigner*innen, Musiker*innen, Videograph*innen und zahlreiche weitere Kreative zusammen,
   die sich gegenseitig bei ihren Arbeiten unterstützen.
