--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -66,7 +66,7 @@ Do the following if you're using your customized build of modernizr (http://www.
   <img class="konkretlogo" alt="Logo" src="../source/konkret/KONKRET.png">
 
 
-  <figcaption> Die Ausstellung KONKRET stellte Fotografien der Frankfurterin <i>Bengi-Luna Paukner</i> und Gemälde von <i>Sophia Brechbilder</i> aus Berlin vor. 
+  <figcaption> Die Ausstellung KONKRET stellte Fotografien der Frankfurterin <i>Bengi-Luna Paukner</i> und Gemälde von <a href="https://www.instagram.com/stravosophi/">Sophia Brechbilder</a> aus Berlin vor. 
    Ergänzt wurde ihre Kunst durch digitale Installationen. Liveauftritte von DJs und Produzenten sowie ein Konzert des Kollektivs <i>Very Young</i> aus
    Frankfurt am Main erschufen den passenden Sound für das 200 Quadratmeter große Beton-Loft. <br>
    Our KONKRET exhibition presented photographs by <i>Bengi-Luna Paukner</i> from Frankfurt and paintings by <i>Sophia Brechbilder</i> from Berlin. Their art was complemented
