--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -63,7 +63,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 <div class="gridContainer clearfix">
 
  <figure>
-  <img class="konkretlogo" alt="Logo" src="../source/konkret/KONKRET.png">
+  <img class="konkretlogo" alt="Logo" src="../source/konkret/KONKRET_white.png">
 
 
   <figcaption> Die Ausstellung KONKRET stellte Fotografien der Frankfurterin <a href="https://www.instagram.com/bengiluna/" target="_blank">Bengi-Luna Paukner</a> und Gemälde von <a href="https://www.instagram.com/stravosophi/" target="_blank">Sophia Brechbilder</a> aus Berlin vor. 
