--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -37,6 +37,10 @@ Do the following if you're using your customized build of modernizr (http://www.
  .medien {
   margin-top:50%;
   }
+  
+  figcaption  {
+  color:white;
+  }
 
  @media only screen and (orientation: portrait) {
   .medien {
