--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -41,6 +41,21 @@ Do the following if you're using your customized build of modernizr (http://www.
   figcaption  {
   color:white;
   }
+  
+  a:link
+{
+    color:#FFFFFF;
+}
+
+a:visited
+{
+    color:#FFFFFF;
+}
+
+a:hover 
+{
+    color:#FFFFFF;
+}
 
  @media only screen and (orientation: portrait) {
   .medien {
