--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -110,7 +110,7 @@ a:hover
   Your browser does not support the video tag.
   </video>
 
-  <img alt="Bild2" class="Bild2" src="../source/konkret/konkret_bild2.jpg">
+  <img alt="Bild2" class="Bild2" src="./konkretmedia/konkret_bild2.jpg">
 
 
 </div>
