--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -111,8 +111,14 @@ a:hover
   </video>
 
   <img alt="Bild2" class="Bild2" src="./konkretmedia/konkret_bild2.jpg">
-
-
+  <img alt="Bild2" class="Bild2" src="./konkretmedia/konkret_bild3.jpg">
+  <img alt="Bild2" class="Bild2" src="./konkretmedia/konkret_bild4.jpg">
+  <img alt="Bild2" class="Bild2" src="./konkretmedia/konkret_bild5.jpg">
+  <img alt="Bild2" class="Bild2" src="./konkretmedia/konkret_bild6.jpg">
+  <img alt="Bild2" class="Bild2" src="./konkretmedia/konkret_bild7.jpg">
+  <img alt="Bild2" class="Bild2" src="./konkretmedia/konkret_bild8.jpg">
+   
+   
 </div>
 
 </div>
