--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -117,7 +117,7 @@ a:hover
   <img alt="Bild6" class="Bild2" src="./konkretmedia/konkret_bild6.jpg">
   <img alt="Bild7" class="Bild2" src="./konkretmedia/konkret_bild7.jpg">
   <img alt="Bild8" class="Bild2" src="./konkretmedia/konkret_bild8.jpg">
-   
+  <img alt="Bild9" class="Bild2" src="./konkretmedia/konkret_bild9.jpg"> 
    
 </div>
 
