--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -36,7 +36,8 @@ Do the following if you're using your customized build of modernizr (http://www.
 
  .medien {
   margin-top:50%;
-  width:70%;
+  width:90%;
+  padding:20%;
   }
   
   figcaption  {
