--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -88,10 +88,10 @@ a:hover
 
   <figcaption> Die Ausstellung KONKRET stellte Fotografien der Frankfurterin <a href="https://www.instagram.com/bengiluna/" target="_blank">Bengi-Luna Paukner</a> und Gemälde von <a href="https://www.instagram.com/stravosophi/" target="_blank">Sophia Brechbilder</a> aus Berlin vor. 
    Ergänzt wurde ihre Kunst durch digitale Installationen. Liveauftritte von DJs und Produzenten sowie ein Konzert des Kollektivs <i>Very Young</i> aus
-   Frankfurt am Main erschufen den passenden Sound für das 200 Quadratmeter große Beton-Loft. <br><br>
+   Frankfurt am Main erschufen den passenden Sound für das Beton-Loft. <br><br>
    Our KONKRET exhibition presented photographs by <a href="https://www.instagram.com/bengiluna/" target="_blank">Bengi-Luna Paukner</a> from Frankfurt and paintings by <a href="https://www.instagram.com/stravosophi/" target="_blank">Sophia Brechbilder</a> from Berlin. Their art was complemented
    by digital installations. Live performances by DJs and producers as well as a concert by the collective "Very Young" from Frankfurt created the matching sound
-   for the 200-square-meter concrete loft.
+   for the concrete loft.
   
   
   
