--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -35,7 +35,7 @@ Do the following if you're using your customized build of modernizr (http://www.
   }
 
  .medien {
-  margin-top:50%;
+  margin-top:70%;
   width:90%;
   }
   
@@ -101,16 +101,7 @@ a:hover
 
   <div class="medien">
 
-
-
   <img alt="Bild1" class="Bild1" src="../source/konkret/konkret_bild1.JPG">
-   
-   
-   <video class="trailer" playsinline autoplay muted loop>
-  <source src="../veranstaltungen/konkretmedia/konkret_video1.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-  </video>
-
   <img alt="Bild2" class="Bild2" src="./konkretmedia/konkret_bild2.jpg">
   <img alt="Bild3" class="Bild2" src="./konkretmedia/konkret_bild3.jpg">
   <img alt="Bild4" class="Bild2" src="./konkretmedia/konkret_bild4.jpg">
@@ -119,6 +110,13 @@ a:hover
   <img alt="Bild7" class="Bild2" src="./konkretmedia/konkret_bild7.jpg">
   <img alt="Bild8" class="Bild2" src="./konkretmedia/konkret_bild8.jpg">
   <img alt="Bild9" class="Bild2" src="./konkretmedia/konkret_bild9.jpg"> 
+   
+  
+  <video class="trailer" playsinline autoplay muted loop>
+  <source src="../veranstaltungen/konkretmedia/konkret_video1.mp4" type="video/mp4">
+  Your browser does not support this video.
+  
+  </video> 
    
 </div>
 
