--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -101,7 +101,7 @@ a:hover
 
   <div class="medien">
 
-  <img alt="Bild1" class="Bild1" src="../source/konkret/konkret_bild1.JPG">
+  <img alt="Bild1" class="Bild1" src="./konkretmedia/konkret_bild1.JPG">
   <img alt="Bild2" class="Bild2" src="./konkretmedia/konkret_bild2.jpg">
   <img alt="Bild3" class="Bild2" src="./konkretmedia/konkret_bild3.jpg">
   <img alt="Bild4" class="Bild2" src="./konkretmedia/konkret_bild4.jpg">
