--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -36,6 +36,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 
  .medien {
   margin-top:70%;
+  margin-bottom: 2em;
   width:90%;
   }
   
