--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -36,8 +36,11 @@ Do the following if you're using your customized build of modernizr (http://www.
 
  .medien {
   margin-top:70%;
-  margin-bottom: 2em;
   width:90%;
+  }
+  
+  .Bild {
+  margin-bottom: 10%;
   }
   
   figcaption  {
@@ -102,15 +105,15 @@ a:hover
 
   <div class="medien">
 
-  <img alt="Bild1" class="Bild1" src="./konkretmedia/konkret_bild1.jpg">
-  <img alt="Bild2" class="Bild2" src="./konkretmedia/konkret_bild2.jpg">
-  <img alt="Bild3" class="Bild2" src="./konkretmedia/konkret_bild3.jpg">
-  <img alt="Bild4" class="Bild2" src="./konkretmedia/konkret_bild4.jpg">
-  <img alt="Bild5" class="Bild2" src="./konkretmedia/konkret_bild5.jpg">
-  <img alt="Bild6" class="Bild2" src="./konkretmedia/konkret_bild6.jpg">
-  <img alt="Bild7" class="Bild2" src="./konkretmedia/konkret_bild7.jpg">
-  <img alt="Bild8" class="Bild2" src="./konkretmedia/konkret_bild8.jpg">
-  <img alt="Bild9" class="Bild2" src="./konkretmedia/konkret_bild9.jpg"> 
+  <img alt="Bild1" class="Bild" src="./konkretmedia/konkret_bild1.jpg">
+  <img alt="Bild2" class="Bild" src="./konkretmedia/konkret_bild2.jpg">
+  <img alt="Bild3" class="Bild" src="./konkretmedia/konkret_bild3.jpg">
+  <img alt="Bild4" class="Bild" src="./konkretmedia/konkret_bild4.jpg">
+  <img alt="Bild5" class="Bild" src="./konkretmedia/konkret_bild5.jpg">
+  <img alt="Bild6" class="Bild" src="./konkretmedia/konkret_bild6.jpg">
+  <img alt="Bild7" class="Bild" src="./konkretmedia/konkret_bild7.jpg">
+  <img alt="Bild8" class="Bild" src="./konkretmedia/konkret_bild8.jpg">
+  <img alt="Bild9" class="Bild" src="./konkretmedia/konkret_bild9.jpg"> 
    
   
   <video class="trailer" playsinline autoplay muted loop>
