--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -47,6 +47,10 @@ Do the following if you're using your customized build of modernizr (http://www.
   color:white;
   }
   
+  figcaption  {
+  color:white;
+  }
+  
   a:link
 {
     color:#FFFFFF;
@@ -115,7 +119,8 @@ a:hover
   <img alt="Bild8" class="Bild" src="./konkretmedia/konkret_bild8.jpg">
   <img alt="Bild9" class="Bild" src="./konkretmedia/konkret_bild9.jpg"> 
    
-  
+   <p class="Bild">Fotos von Bengi-Luna Paukner.</p>
+   
   <video class="trailer" playsinline autoplay muted loop>
   <source src="../veranstaltungen/konkretmedia/konkret_video1.mp4" type="video/mp4">
   Your browser does not support this video.
