--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -48,7 +48,8 @@ Do the following if you're using your customized build of modernizr (http://www.
   }
   
   p  {
-  padding-right:60%;
+	 color:white;
+  	 padding-right:60%;
 	 font-family:Arial;
 	 animation-name:textdeckkraft;
 	 animation-duration:3s;
