--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -76,6 +76,12 @@ a:hover
   .medien {
     margin-top:570px;
   }
+	 .figcaption {
+	 width:100%;
+	 
+	 } 
+	 
+	 
 }
 
 
@@ -123,9 +129,7 @@ a:hover
   <img alt="Bild7" class="Bild" src="./konkretmedia/konkret_bild7.jpg">
   <img alt="Bild5" class="Bild" src="./konkretmedia/konkret_bild5.jpg">
 
-   
-   <p class="Bild">Fotos von Bengi-Luna Paukner.</p>
-   
+      
   <video class="trailer" playsinline autoplay muted loop>
   <source src="../veranstaltungen/konkretmedia/konkret_video1.mp4" type="video/mp4">
   Your browser does not support this video.
