--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -76,10 +76,12 @@ a:hover
   .medien {
     margin-top:570px;
   }
-	 .figcaption {
-	 width:100%;
+	 figure { display: table; }
+
+
+figcaption { display: table-caption; caption-side: bottom ; }
 	 
-	 } 
+	
 	 
 	 
 }
