--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -74,15 +74,13 @@ a:hover
 
  @media only screen and (orientation: portrait) {
   .medien {
-    margin-top:1000px;
+    margin-top:510px;
   }
-	 figure { display: table; }
-
-
-figcaption { display: table-caption; caption-side: bottom ; }
-	 
 	
-	 
+
+   figcaption {
+    position:absolute; }
+		 
 	 
 }
 
