--- a/veranstaltungen/konkret.html
+++ b/veranstaltungen/konkret.html
@@ -133,11 +133,11 @@ a:hover
   <img alt="Bild5" class="Bild" src="./konkretmedia/konkret_bild5.jpg">
 
       
-  <video class="trailer" playsinline autoplay muted loop>
+  <!-- <video class="trailer" playsinline autoplay muted loop>
   <source src="../veranstaltungen/konkretmedia/konkret_video1.mp4" type="video/mp4">
   Your browser does not support this video.
   
-  </video> 
+  </video> -->
    
 </div>
 
