fix: dirty workaround to avoid unnecessary comma on HCC page

--- a/arbeiten/gemeinnütziges.html
+++ b/arbeiten/gemeinnütziges.html
@@ -115,11 +115,9 @@
     </div>
 
     <div id="blm">
-      <h1>HELP CREATE CHANGE
-      </h1>
-      <p id="text">
-      <!--</p>
-      <img src="../source/arbeiten/gemeinnuetziges/tshirt.gif" hidden>
-    </div>-->
+      <h1>HELP CREATE CHANGE</h1>
+      <p id="text"></p>
+      <!--<img src="../source/arbeiten/gemeinnuetziges/tshirt.gif" hidden>-->
+    </div>
   </body>
 </html>
