--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   </head>
   <body>
     <a  href="https://www.healthyego.studio/">
-      <img src="source/logos/HE.studio.png" alt="HE_Logo" >
+      <img src="source/logos/HEALTHY-EGO_Logo_Blur.png" alt="HE_Logo" >
     </a>
 
     <div id="popup">
