--- a/assoziation.html
+++ b/assoziation.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Impressum</title>
+  <title>Association</title>
   <style>
   .logo{
     width: 80%;
@@ -63,18 +63,7 @@
 <body>
 
   <div class="board">
-    <img class="logo" src="https://healthyego.github.io/dev/source/logos/HE.png">
-    <p>
-      Nelson Gutjahr<br>
-      Metzgergasse 11<br>
-      63739 Aschaffenburg
-    </p>
-
-    <p>
-      Paul Schlenzig<br>
-      Dalbergstraße 2<br>
-      63739 Aschaffenburg
-    </p>
+    <img class="logo" src="https://healthyego.github.io/dev/source/logos/Schriftzug_mit_Logo.png">
 
     <p>
       <a href="mailto:healthego@icloud.com">E-Mail</a>
@@ -86,59 +75,32 @@
 
 <h1 class="subject">HEALTHY EGO – Verein für Kunst- & Kulturförderung e.V.</h1>
 
-<p class="description">
-  Unser Ziel bei HEALTHY EGO ist es, die kollaborative Förderung von Kunst und Kultur zu realisieren.
-  Konkret heißt das: Wir koordinieren aktiv die Zusammenarbeit zwischen Künstlerinnen und Künstlern.
-  Wir bringen Producer*innen, Softwareentwickler*innen, Modedesigner*innen, Fotograf*innen,
-  Grafikdesigner*innen, Musiker*innen, Videograph*innen und zahlreiche weitere Kreative zusammen,
-  die sich gegenseitig bei ihren Arbeiten unterstützen.
-  <br>
-  <br>
-  Darüber hinaus bieten wir unseren Künstlern eine Plattform:
-  Mit der Verwirklichung von
-  <a href="./veranstaltungen.html">Veranstaltungen</a>
-  machen wir unsere spannende Projektvielfalt erlebbar.
-  Neben der Organisation von Ausstellungen, Konzerten und Lesungen unterstützen wir unsere
-  Vereinsmitglieder auch bei der Konzeption und Veröffentlichung von Publikationen.
-  <br>
-  <br>
-  Wir möchten junge Menschen fördern, die ihr Potential erkennen:
-  Du bist künstlerisch aktiv und willst deinen Horizont erweitern,
-  neue Kontakte knüpfen und Unterstützung bei der Umsetzung deiner Ideen erhalten?
-  Wir sind ständig auf der Suche nach Talenten, die unseren Verein noch vielfältiger machen!
-  Wir sind ortsunabhängig aktiv - jeder kann von überall aus mitwirken.
-  Wir freuen uns über deine
-  <a href="mailto:healthego@icloud.com">Kontaktaufnahme</a>!
-  <br>
-  <br>
-</p>
-
-
-
+  
 <p class="description">
   <i>
-    Our goal at HEALTHY EGO is to realise the collaborative promotion of art and culture.
-    In concrete terms this means that we actively coordinate the collaboration between artists.
-    We bring together producers, software developers, fashion designers, photographers,
-    graphic designers, musicians, videographers and many other creatives who support each other's work.
+    We are actively coordinating the collaboration between artists. The HEALTHY EGO association is connecting musicians, photographers, producers, software developers, fashion designers, graphic designers, videographers and many other creatives who are supporting each other.
     <br>
     <br>
-    In addition, we offer our artists a platform: by realising
+    In addition, we offer artists a platform: by realising
     <a href="./veranstaltungen.html">events</a>, our exciting variety of projects can be experienced.
     In addition to organising exhibitions, concerts and readings, we also support our association
-    members in the conception and publication of publications.
+    members in the conception and promotion of publications.
     <br>
     <br>
-    We want to support young people who recognise their potential:
-    Are you artistically active, do you want to broaden your horizons,
-    do you want to network and receive support in realising your ideas?
+    We want to support young people who are recognising their potential:
+    Are you an artist or creative? Do you want to network and receive support in realising your ideas?
     We are always on the lookout for talent to make our association
     even more diverse! We are location-independent - anyone can participate from anywhere.
     <br>
-    We look forward to
+    We are looking forward to
     <a href="mailto:healthego@icloud.com">hearing from you</a>!
   </i>
- </p>
+ </p>  
+  
+
+
+
+ 
 
 
 <a href="https://www.healthyego.studio/">
