--- a/assoziation.html
+++ b/assoziation.html
@@ -91,8 +91,7 @@
     We are always on the lookout for talent to make our association
     even more diverse! We are location-independent - anyone can participate from anywhere.
     <br>
-    We are looking forward to
-    <a href="mailto:healthego@icloud.com">hearing from you</a>!
+    We are looking forward to hearing from you!
  </p>  
   
 
