--- a/assoziation.html
+++ b/assoziation.html
@@ -82,27 +82,15 @@
     <br>
     In addition, we offer artists a platform: by realising
     <a href="./veranstaltungen.html">events</a>, our exciting variety of projects can be experienced.
-    In addition to organising exhibitions, concerts and readings, we also support our association
+    In addition to organising exhibitions, concerts and readings, we are also supporting our association
     members in the conception and promotion of publications.
     <br>
     <br>
-    We want to support young people who are recognising their potential:
-    Are you an artist or creative? Do you want to network and receive support in realising your ideas?
-    We are always on the lookout for talent to make our association
+    We want to support young artists and creatives who are aware of their potential. Do you want to network and receive support in realising your ideas?
+    We are always on the lookout for talents who make our association
     even more diverse! We are location-independent - anyone can participate from anywhere.
     <br>
-    We are looking forward to hearing from you!
- </p>  
-  
-
-
-
- 
-
-
-<a href="https://www.healthyego.studio/">
-    <img class="studio" src="source/logos/HE.studio.png" alt="HE_Logo" >
-</a>
-
+    Just text us on Instagram or send us an e-mail. We are looking forward to hearing from you! 
+ </p> 
 
 </html>
