--- a/index.html
+++ b/index.html
@@ -110,14 +110,10 @@
     </a>
 
     <div id="popup">
-      <p>Wir nutzen Google Analytics, um unseren Internetauftritt zu verbessern.
-        So können wir die bereitgestellten Inhalte besser auf deine Anforderungen anpassen.
-        Mehr Infos findest du 
-         <a href="https://analytics.google.com/analytics/web/" id="popup_link">hier</a>.
-      </p>
 
-      <p><i>We use Google Analytics to enhance our website.
-         Google Analytics helps us to adjust our content to your needs.
+
+      <p>We are using <i>Google Analytics</i> to improve our website.
+         <i>Google Analytics</i> helps us to adjust our content to your needs.
          More information can be found
          <a href="https://analytics.google.com/analytics/web/" id="popup_link">here</a>.<i>
       </p>
