--- a/arbeiten/fotografisch.html
+++ b/arbeiten/fotografisch.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>...redirecting</title>
-      <meta http-equiv = "refresh" content = "4.6; url = https://joelbittner.de" />
+      <meta http-equiv = "refresh" content = "4.6; url = https://www.instagram.com/joelbittner" />
 
       <!-- Global site tag (gtag.js) - Google Analytics -->
        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163797979-1"></script>
