--- a/arbeiten/audiovisuell.html
+++ b/arbeiten/audiovisuell.html
@@ -22,6 +22,6 @@
 
   </head>
   <body>
-    <p>this is were you will find videos and trailers</p>
+    <p>Site under construction. Please visit our Instagram for our latest work.</p>
   </body>
 </html>
