--- a/assoziation.html
+++ b/assoziation.html
@@ -77,7 +77,7 @@
 
   
 <p class="description">
-    We are actively coordinating the collaboration between artists. The HEALTHY EGO association is connecting musicians, photographers, producers, software developers, fashion designers, graphic designers, videographers and many other creatives who are supporting each other.
+    We are coordinating collaborations between artists and creatives. The HEALTHY EGO association is connecting musicians, photographers, videographers, producers, graphic designers, software developers and fashion designers.
     <br>
     <br>
     In addition, we offer artists a platform: by realising
@@ -86,11 +86,11 @@
     members in the conception and promotion of publications.
     <br>
     <br>
-    We want to support young artists and creatives who are aware of their potential. Do you want to network and receive support in realising your ideas?
+    We are here to support young artists and creatives. Do you need support in realising your ideas?
     We are always on the lookout for talents who make our association
     even more diverse! We are location-independent - anyone can participate from anywhere.
     <br>
-    Just text us on Instagram or send us an e-mail. We are looking forward to hearing from you! 
+    Just contact us on <a href="https://www.instagram.com/haelthyego/">Instagram</a> or send us an <a href="mailto:healthyego@icloud.com">e-mail</a>. We are looking forward to hearing from you! 
  </p> 
 
 </html>
